ido_sdk_flutter/ido_sdk/protocol_sdk/protocol_ffi/ios/protocol_c.framework/Headers/ido_protocol_public_interface.h

//回调处理函数,解析固件回复结果打包成json上报app
typedef void (*protocol_json_cb_handle)(char *json_str, VBUS_EVT_TYPE type, uint32_t error_code);
//回调处理函数,同步v2活动数据进度回调
typedef void (*protocol_sync_activity_progress_cb_handle)(uint8_t progress);
//回调处理函数,同步v2活动数据完成回调
typedef void (*protocol_sync_activity_complete_cb_handle)(uint32_t error_code);
//回调处理函数,同步v2GPS数据进度回调
typedef void (*protocol_sync_gps_progress_cb_handle)(uint8_t progress);
//回调处理函数,同步v2GPS数据完成回调
typedef void (*protocol_sync_gps_complete_cb_handle)(uint32_t error_code);
//回调处理函数,同步v2健康数据进度回调
typedef void (*protocol_sync_health_progress_cb_handle)(uint8_t progress);
//回调处理函数,v3血压校准完成通知回调
typedef void (*protocol_bp_cal_complete_cb_handle)(uint32_t error_code);
//回调处理函数,同步v3健康数据进度回调
typedef void (*protocol_sync_v3_health_client_progress_cb_handle)(uint8_t progress);
//回调处理函数,同步v3健康数据完成回调
typedef void (*protocol_sync_v3_health_client_complete_cb_handle)(uint32_t error_code);//v3同步完成事件,注意错误值,SUCCESS为成功,其他为失败
//回调处理函数,同步v3健康数据项完成回调
typedef void (*protocol_sync_v3_health_client_one_notice_complete_cb_handle)(uint8_t type);
//回调处理函数,上报进度
typedef void (*protocol_report_progress_cb_handle)(uint8_t progress);
//回调处理函数,上报完成
typedef void (*protocol_report_complete_cb_handle)(uint32_t error_vale);
//回调处理函数,上报json
typedef void (*protocol_report_json_cb_handle)(char *json_str);
/**
 * @brief:设备传输文件到APP的传输完成事件回调注册
 * @param func 函数指针
 * @return:SUCCESS(0)成功
 * */
extern uint32_t Device2AppDataTranCompleteCallbackReg(protocol_report_complete_cb_handle func);
/**
 * @brief:设备传输文件到APP的传输进度事件回调注册
 * @param func 函数指针
 * @return:SUCCESS(0)成功
 * */
extern uint32_t Device2AppDataTranProgressCallbackReg(protocol_report_progress_cb_handle func);
/**
 * @brief:APP回复设备传输文件到APP的请求
 * @param error_code 0回复握手成功 非0失败，拒绝传输
 * @return:SUCCESS(0)成功
 * */
extern uint32_t Device2AppDataTranRequestReply(uint32_t error_code);
/**
 * @brief:APP主动停止设备传输文件到APP
 * @return:SUCCESS(0)成功
 * */
extern uint32_t Device2AppDataTranManualStop(void);
/**
 * @brief:设备传输文件到APP的传输请求事件回调注册
 * json字符串内容:
 * file_type 文件类型:
 * typedef enum{
 *   DATA_TRAN_FILE_TYPE_UNKNOWN,           //无效
 *   DATA_TRAN_FILE_TYPE_FW,                //固件升级文件
 *   DATA_TRAN_FILE_TYPE_FZBIN,             //图片资源升级
 *   DATA_TYPE_FILE_TYPE_BIN,               //字库升级
 *   DATA_TYPE_FILE_TYPE_LANG,              //语言包
 *   DATA_TYPE_FILE_TYPE_BT,                //BT文件
 *   DATA_TYPE_FILE_TYPE_IWF,               //云表盘文件
 *   DATA_TYPE_FILE_TYPE_WALLPAPER,         //本地壁纸文件
 *   DATA_TYPE_FILE_TYPE_ML,                //通讯录文件
 *   DATA_TYPE_FILE_TYPE_UBX,               //AGPS文件
 *   DATA_TYPE_FILE_TYPE_GPS,               //GPS文件
 *   DATA_TYPE_FILE_TYPE_MP3,               //MP3文件
 *   DATA_TYPE_FILE_TYPE_MESSAGE,           //消息图标
 *   DATA_TYPE_FILE_TYPE_SPORT,             //运动图片 单图
 *   DATA_TYPE_FILE_TYPE_MOVE_SPORTS,       //运动图片 多图
 *   DATA_TYPE_FILE_TYPE_EPO,               //EPO文件
 *   DATA_TYPE_FILE_TYPE_TONE,              //提示音
 *   DATA_TYPE_FILE_TYPE_BP_CALIBRATE,      //血压校准文件
 *   DATA_TYPE_FILE_TYPE_BP_ALGORITHM,      //血压模型算法文件
 *   DATA_TYPE_FILE_TYPE_VOICE = 0x13       //语音备忘录文件
 *  }TRAN_FILE_TYPE;
 * file_size 文件大小
 * file_compression_type 文件压缩类型 0不压缩
 * file_name 文件名称
 * file_path 文件路径
 *
 * @param func 函数指针
 * @return:SUCCESS(0)成功
 * 备注：收到回调后，10s没有使用该方法dev_2_app_tran_request_reply回复设备，会结束传输
 * */
extern uint32_t Device2AppDataTranRequestCallbackReg(protocol_report_json_cb_handle func);
/**
 * @brief v3血压校准完成事件回调注册
 * @param func 函数指针
 * @return SUCCESS(0)成功
 * */
extern uint32_t ProtocolV3BpCalCompleteCallbackReg(protocol_bp_cal_complete_cb_handle func);
/**
 * @brief 同步v3健康数据进度回调注册
 * @param func 函数指针
 * @return SUCCESS(0)成功
 * */
extern uint32_t SyncV3HealthDataProgressCallbackReg(protocol_sync_v3_health_client_progress_cb_handle func);
/**
 * @brief 同步v3健康数据完成事件回调注册
 * @param func 函数指针
 * @return SUCCESS(0)成功
 * */
extern uint32_t SyncV3HealthDataCompleteCallbackReg(protocol_sync_v3_health_client_complete_cb_handle func);
/**
 * @brief 同步v3健康数据项完成事件回调注册(指的是每一种类型的健康数据收集完成后都会通过回调上报SDK)
 * @param func 函数指针
 * @return SUCCESS(0)成功
 * */
extern uint32_t SyncV3HealthDataOneNoticeCompleteCbReg(protocol_sync_v3_health_client_one_notice_complete_cb_handle func);
/**
 * @brief:同步v3健康数据的自定义一项
 * @param data_type 数据同步类型
 * 1 同步血氧
 * 2 同步压力
 * 3 同步心率(v3)
 * 4 同步多运动数据(v3)
 * 5 同步GPS数据(v3)
 * 6 同步游泳数据
 * 7 同步眼动睡眠数据
 * 8 同步运动数据
 * 9 同步噪音数据
 * 10 同步温度数据
 * 12 同步血压数据
 * 14 同步呼吸频率数据
 * 15 同步身体电量数据
 * 16 同步HRV(心率变异性水平)数据
 *
 * @return:
 * SUCCESS(0)成功 非0失败
 * (ERROR_NOT_SUPPORTED(6) 不支持
 * ERROR_INVALID_STATE(8) 非法状态
 * )
 * */
extern uint32_t SyncV3HealthDataCustomResource(int data_type);
/**
 * @brief:查找输入的数据同步类型支不支持
 * @param data_type 数据同步类型
 * 1  同步血氧
 * 2  同步压力
 * 3  同步心率(v3)
 * 4  同步多运动数据(v3)
 * 5  同步GPS数据(v3)
 * 6  同步游泳数据
 * 7  同步眼动睡眠数据
 * 8  同步运动数据
 * 9  同步噪音数据
 * 10 同步温度数据
 * 12 同步血压数据
 * 14 同步呼吸频率数据
 * 15 同步身体电量数据
 * 16 同步HRV(心率变异性水平)数据
 *
 * @return:
 * true:支持 false:不支持
 * 方法实现前需获取功能表跟初始化c库
 */
extern bool IsSupportSyncHealthDataType(int data_type);
// ------------------------------ v2同步多运动、GPS数据进度回调注册 ------------------------------
/**
 * @brief 同步v2活动数据进度回调注册
 * @param func 函数指针
 * @return SUCCESS(0)成功
 * */
extern uint32_t SyncV2ActivityProgressCallbackReg(protocol_sync_activity_progress_cb_handle func);
/**
 * @brief 同步v2活动数据完成回调注册
 * @param func 函数指针
 * @return SUCCESS(0)成功 ERROR_TIMEOUT(13)超时 ERROR_INVALID_STATE(8) 异常
 * */
extern uint32_t SyncV2ActivityCompleteCallbackReg(protocol_sync_activity_complete_cb_handle func);
/**
 * @brief 同步v2Gps数据进度回调注册
 * @param func 函数指针
 * @return SUCCESS(0)成功
 * */
extern uint32_t SyncV2GpsProgressCallbackReg(protocol_sync_gps_progress_cb_handle func);
/**
 * @brief 同步v2Gps数据完成回调注册
 * @param func 函数指针
 * @return SUCCESS(0)成功 ERROR_TIMEOUT(13)超时 ERROR_INVALID_STATE(8) 异常
 * */
extern uint32_t SyncV2GpsCompleteCallbackReg(protocol_sync_gps_complete_cb_handle func);
/**
 * @brief 解析完固件返回的v2同步数据二进制数据,打包成json数据回调给SDK
 * @return SUCCESS(0),成功
 * */
extern uint32_t V2SyncDataJsonDataCbReg(protocol_json_cb_handle func);
/**
 * @brief 同步v2健康数据进度回调注册
 * @param func 函数指针
 * @return:SUCCESS(0)成功
 * */
extern uint32_t SyncV2HealthProgressCallbackReg(protocol_sync_health_progress_cb_handle func);