ido_sdk_flutter/ido_sdk/protocol_sdk/protocol_ffi/lib/src/ffi/ido_protocol_ffi.g.dart


  late final _Device2AppDataTranCompleteCallbackRegPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(protocol_report_complete_cb_handle)>>(
      'Device2AppDataTranCompleteCallbackReg');
  late final _Device2AppDataTranCompleteCallbackReg =
      _Device2AppDataTranCompleteCallbackRegPtr.asFunction<
          int Function(protocol_report_complete_cb_handle)>();

  /// @brief:设备传输文件到APP的传输进度事件回调注册
  /// @param func 函数指针
  /// @return:SUCCESS(0)成功
  int Device2AppDataTranProgressCallbackReg(
    protocol_report_progress_cb_handle func,
  ) {
    return _Device2AppDataTranProgressCallbackReg(
      func,
    );
  }

  late final _Device2AppDataTranProgressCallbackRegPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(protocol_report_progress_cb_handle)>>(
      'Device2AppDataTranProgressCallbackReg');
  late final _Device2AppDataTranProgressCallbackReg =
      _Device2AppDataTranProgressCallbackRegPtr.asFunction<
          int Function(protocol_report_progress_cb_handle)>();

  /// @brief:APP回复设备传输文件到APP的请求
  /// @param error_code 0回复握手成功 非0失败，拒绝传输
  /// @return:SUCCESS(0)成功
  int Device2AppDataTranRequestReply(
    int error_code,
  ) {
    return _Device2AppDataTranRequestReply(
      error_code,
    );
  }

  late final _Device2AppDataTranRequestReplyPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
          'Device2AppDataTranRequestReply');
  late final _Device2AppDataTranRequestReply =
      _Device2AppDataTranRequestReplyPtr.asFunction<int Function(int)>();

  /// @brief:APP主动停止设备传输文件到APP
  /// @return:SUCCESS(0)成功
  int Device2AppDataTranManualStop() {
    return _Device2AppDataTranManualStop();
  }

  late final _Device2AppDataTranManualStopPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'Device2AppDataTranManualStop');
  late final _Device2AppDataTranManualStop =
      _Device2AppDataTranManualStopPtr.asFunction<int Function()>();

  /// @brief:设备传输文件到APP的传输请求事件回调注册
  /// json字符串内容:
  /// file_type 文件类型:
  /// typedef enum{
  /// DATA_TRAN_FILE_TYPE_UNKNOWN,           //无效
  /// DATA_TRAN_FILE_TYPE_FW,                //固件升级文件
  /// DATA_TRAN_FILE_TYPE_FZBIN,             //图片资源升级
  /// DATA_TYPE_FILE_TYPE_BIN,               //字库升级
  /// DATA_TYPE_FILE_TYPE_LANG,              //语言包
  /// DATA_TYPE_FILE_TYPE_BT,                //BT文件
  /// DATA_TYPE_FILE_TYPE_IWF,               //云表盘文件
  /// DATA_TYPE_FILE_TYPE_WALLPAPER,         //本地壁纸文件
  /// DATA_TYPE_FILE_TYPE_ML,                //通讯录文件
  /// DATA_TYPE_FILE_TYPE_UBX,               //AGPS文件
  /// DATA_TYPE_FILE_TYPE_GPS,               //GPS文件
  /// DATA_TYPE_FILE_TYPE_MP3,               //MP3文件
  /// DATA_TYPE_FILE_TYPE_MESSAGE,           //消息图标
  /// DATA_TYPE_FILE_TYPE_SPORT,             //运动图片 单图
  /// DATA_TYPE_FILE_TYPE_MOVE_SPORTS,       //运动图片 多图
  /// DATA_TYPE_FILE_TYPE_EPO,               //EPO文件
  /// DATA_TYPE_FILE_TYPE_TONE,              //提示音
  /// DATA_TYPE_FILE_TYPE_BP_CALIBRATE,      //血压校准文件
  /// DATA_TYPE_FILE_TYPE_BP_ALGORITHM,      //血压模型算法文件
  /// DATA_TYPE_FILE_TYPE_VOICE = 0x13       //语音备忘录文件
  /// }TRAN_FILE_TYPE;
  /// file_size 文件大小
  /// file_compression_type 文件压缩类型 0不压缩
  /// file_name 文件名称
  /// file_path 文件路径
  ///
  /// @param func 函数指针
  /// @return:SUCCESS(0)成功
  /// 备注：收到回调后，10s没有使用该方法dev_2_app_tran_request_reply回复设备，会结束传输
  int Device2AppDataTranRequestCallbackReg(
    protocol_report_json_cb_handle func,
  ) {
    return _Device2AppDataTranRequestCallbackReg(
      func,
    );
  }

  late final _Device2AppDataTranRequestCallbackRegPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(protocol_report_json_cb_handle)>>(
      'Device2AppDataTranRequestCallbackReg');
  late final _Device2AppDataTranRequestCallbackReg =
      _Device2AppDataTranRequestCallbackRegPtr.asFunction<
          int Function(protocol_report_json_cb_handle)>();

  /// @brief v3血压校准完成事件回调注册
  /// @param func 函数指针
  /// @return SUCCESS(0)成功
  int ProtocolV3BpCalCompleteCallbackReg(
    protocol_bp_cal_complete_cb_handle func,
  ) {
    return _ProtocolV3BpCalCompleteCallbackReg(
      func,
    );
  }

  late final _ProtocolV3BpCalCompleteCallbackRegPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(protocol_bp_cal_complete_cb_handle)>>(
      'ProtocolV3BpCalCompleteCallbackReg');
  late final _ProtocolV3BpCalCompleteCallbackReg =
      _ProtocolV3BpCalCompleteCallbackRegPtr.asFunction<
          int Function(protocol_bp_cal_complete_cb_handle)>();

  /// @brief 同步v3健康数据进度回调注册
  /// @param func 函数指针
  /// @return SUCCESS(0)成功
  int SyncV3HealthDataProgressCallbackReg(
    protocol_sync_v3_health_client_progress_cb_handle func,
  ) {
    return _SyncV3HealthDataProgressCallbackReg(
      func,
    );
  }

  late final _SyncV3HealthDataProgressCallbackRegPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(
                  protocol_sync_v3_health_client_progress_cb_handle)>>(
      'SyncV3HealthDataProgressCallbackReg');
  late final _SyncV3HealthDataProgressCallbackReg =
      _SyncV3HealthDataProgressCallbackRegPtr.asFunction<
          int Function(protocol_sync_v3_health_client_progress_cb_handle)>();

  /// @brief 同步v3健康数据完成事件回调注册
  /// @param func 函数指针
  /// @return SUCCESS(0)成功
  int SyncV3HealthDataCompleteCallbackReg(
    protocol_sync_v3_health_client_complete_cb_handle func,
  ) {
    return _SyncV3HealthDataCompleteCallbackReg(
      func,
    );
  }

  late final _SyncV3HealthDataCompleteCallbackRegPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(
                  protocol_sync_v3_health_client_complete_cb_handle)>>(
      'SyncV3HealthDataCompleteCallbackReg');
  late final _SyncV3HealthDataCompleteCallbackReg =
      _SyncV3HealthDataCompleteCallbackRegPtr.asFunction<
          int Function(protocol_sync_v3_health_client_complete_cb_handle)>();

  /// @brief 同步v3健康数据项完成事件回调注册(指的是每一种类型的健康数据收集完成后都会通过回调上报SDK)
  /// @param func 函数指针
  /// @return SUCCESS(0)成功
  int SyncV3HealthDataOneNoticeCompleteCbReg(
    protocol_sync_v3_health_client_one_notice_complete_cb_handle func,
  ) {
    return _SyncV3HealthDataOneNoticeCompleteCbReg(
      func,
    );
  }

  late final _SyncV3HealthDataOneNoticeCompleteCbRegPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(
                  protocol_sync_v3_health_client_one_notice_complete_cb_handle)>>(
      'SyncV3HealthDataOneNoticeCompleteCbReg');
  late final _SyncV3HealthDataOneNoticeCompleteCbReg =
      _SyncV3HealthDataOneNoticeCompleteCbRegPtr.asFunction<
          int Function(
              protocol_sync_v3_health_client_one_notice_complete_cb_handle)>();

  /// @brief:同步v3健康数据的自定义一项
  /// @param data_type 数据同步类型
  /// 1 同步血氧
  /// 2 同步压力
  /// 3 同步心率(v3)
  /// 4 同步多运动数据(v3)
  /// 5 同步GPS数据(v3)
  /// 6 同步游泳数据
  /// 7 同步眼动睡眠数据
  /// 8 同步运动数据
  /// 9 同步噪音数据
  /// 10 同步温度数据
  /// 12 同步血压数据
  /// 14 同步呼吸频率数据
  /// 15 同步身体电量数据
  /// 16 同步HRV(心率变异性水平)数据
  ///
  /// @return:
  /// SUCCESS(0)成功 非0失败
  /// (ERROR_NOT_SUPPORTED(6) 不支持
  /// ERROR_INVALID_STATE(8) 非法状态
  /// )
  int SyncV3HealthDataCustomResource(
    int data_type,
  ) {
    return _SyncV3HealthDataCustomResource(
      data_type,
    );
  }

  late final _SyncV3HealthDataCustomResourcePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
          'SyncV3HealthDataCustomResource');
  late final _SyncV3HealthDataCustomResource =
      _SyncV3HealthDataCustomResourcePtr.asFunction<int Function(int)>();

  /// @brief:查找输入的数据同步类型支不支持
  /// @param data_type 数据同步类型
  /// 1  同步血氧
  /// 2  同步压力
  /// 3  同步心率(v3)
  /// 4  同步多运动数据(v3)
  /// 5  同步GPS数据(v3)
  /// 6  同步游泳数据
  /// 7  同步眼动睡眠数据
  /// 8  同步运动数据
  /// 9  同步噪音数据
  /// 10 同步温度数据
  /// 12 同步血压数据
  /// 14 同步呼吸频率数据
  /// 15 同步身体电量数据
  /// 16 同步HRV(心率变异性水平)数据
  ///
  /// @return:
  /// true:支持 false:不支持
  /// 方法实现前需获取功能表跟初始化c库
  int IsSupportSyncHealthDataType(
    int data_type,
  ) {
    return _IsSupportSyncHealthDataType(
      data_type,
    );
  }

  late final _IsSupportSyncHealthDataTypePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
          'IsSupportSyncHealthDataType');
  late final _IsSupportSyncHealthDataType =
      _IsSupportSyncHealthDataTypePtr.asFunction<int Function(int)>();

  /// ------------------------------ v2同步多运动、GPS数据进度回调注册 ------------------------------
  /// /**
  ///  * @brief 同步v2活动数据进度回调注册
  ///  * @param func 函数指针
  ///  * @return SUCCESS(0)成功
  ///  * */
  int SyncV2ActivityProgressCallbackReg(
    protocol_sync_activity_progress_cb_handle func,
  ) {
    return _SyncV2ActivityProgressCallbackReg(
      func,
    );
  }

  late final _SyncV2ActivityProgressCallbackRegPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(protocol_sync_activity_progress_cb_handle)>>(
      'SyncV2ActivityProgressCallbackReg');
  late final _SyncV2ActivityProgressCallbackReg =
      _SyncV2ActivityProgressCallbackRegPtr.asFunction<
          int Function(protocol_sync_activity_progress_cb_handle)>();

  /// @brief 同步v2活动数据完成回调注册
  /// @param func 函数指针
  /// @return SUCCESS(0)成功 ERROR_TIMEOUT(13)超时 ERROR_INVALID_STATE(8) 异常
  int SyncV2ActivityCompleteCallbackReg(
    protocol_sync_activity_complete_cb_handle func,
  ) {
    return _SyncV2ActivityCompleteCallbackReg(
      func,
    );
  }

  late final _SyncV2ActivityCompleteCallbackRegPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(protocol_sync_activity_complete_cb_handle)>>(
      'SyncV2ActivityCompleteCallbackReg');
  late final _SyncV2ActivityCompleteCallbackReg =
      _SyncV2ActivityCompleteCallbackRegPtr.asFunction<
          int Function(protocol_sync_activity_complete_cb_handle)>();

  /// @brief 同步v2Gps数据进度回调注册
  /// @param func 函数指针
  /// @return SUCCESS(0)成功
  int SyncV2GpsProgressCallbackReg(
    protocol_sync_gps_progress_cb_handle func,
  ) {
    return _SyncV2GpsProgressCallbackReg(
      func,
    );
  }

  late final _SyncV2GpsProgressCallbackRegPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(protocol_sync_gps_progress_cb_handle)>>(
      'SyncV2GpsProgressCallbackReg');
  late final _SyncV2GpsProgressCallbackReg = _SyncV2GpsProgressCallbackRegPtr
      .asFunction<int Function(protocol_sync_gps_progress_cb_handle)>();

  /// @brief 同步v2Gps数据完成回调注册
  /// @param func 函数指针
  /// @return SUCCESS(0)成功 ERROR_TIMEOUT(13)超时 ERROR_INVALID_STATE(8) 异常
  int SyncV2GpsCompleteCallbackReg(
    protocol_sync_gps_complete_cb_handle func,
  ) {
    return _SyncV2GpsCompleteCallbackReg(
      func,
    );
  }

  late final _SyncV2GpsCompleteCallbackRegPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(protocol_sync_gps_complete_cb_handle)>>(
      'SyncV2GpsCompleteCallbackReg');
  late final _SyncV2GpsCompleteCallbackReg = _SyncV2GpsCompleteCallbackRegPtr
      .asFunction<int Function(protocol_sync_gps_complete_cb_handle)>();

  /// @brief 解析完固件返回的v2同步数据二进制数据,打包成json数据回调给SDK
  /// @return SUCCESS(0),成功
  int V2SyncDataJsonDataCbReg(
    protocol_json_cb_handle func,
  ) {
    return _V2SyncDataJsonDataCbReg(
      func,
    );
  }

  late final _V2SyncDataJsonDataCbRegPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(protocol_json_cb_handle)>>(
          'V2SyncDataJsonDataCbReg');
  late final _V2SyncDataJsonDataCbReg = _V2SyncDataJsonDataCbRegPtr.asFunction<
      int Function(protocol_json_cb_handle)>();

  /// @brief 同步v2健康数据进度回调注册
  /// @param func 函数指针
  /// @return:SUCCESS(0)成功
  int SyncV2HealthProgressCallbackReg(
    protocol_sync_health_progress_cb_handle func,
  ) {
    return _SyncV2HealthProgressCallbackReg(
      func,
    );
  }
